add flash card parser as dependency from github

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-card_parser = { path="card_parser" }
+flash_card_parser = { git = "https://github.com/Lukas412/FlashCardParser.git" }
