--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 iced = "0.10.0"
 flash_card_parser = { git = "https://github.com/Lukas412/FlashCardParser.git" }
+derive_more = "1.0.0-beta.3"
+serde_json = "1.0.107"
+anyhow = "1.0.75"
